--- a/index.html
+++ b/index.html
@@ -9,6 +9,45 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    
+    <!-- Header start -->
+    <header>
+
+    </header>
+    <!-- Header End -->
+    <!-- Top players and top blog start -->
+    <main>
+        <section>
+            <div class="top-player">
+                <div class="player">
+                    <img src="images/players/player-1.png" alt="">
+                    <h3>Player name-1</h3>
+                </div>
+                <div class="player">
+                    <img src="images/players/player-1.png" alt="">
+                    <h3>Player name-2</h3>
+                </div>
+                <div class="player">
+                    <img src="images/players/player-1.png" alt="">
+                    <h3>Player name-3</h3>
+                </div>
+                <div class="player">
+                    <img src="images/players/player-1.png" alt="">
+                    <h3>Player name-4</h3>
+                </div>
+                <div class="player">
+                    <img src="images/players/player-1.png" alt="">
+                    <h3>Player name-5</h3>
+                </div>
+                <div class="player">
+                    <img src="images/players/player-1.png" alt="">
+                    <h3>Player name-6</h3>
+                </div>
+            </div>
+            <div class="top-blog">
+
+            </div>
+        </section>
+    </main>
+    <!-- Top players and top blog end -->
 </body>
 </html>
