--- a/index.html
+++ b/index.html
@@ -16,34 +16,37 @@
     <!-- Header End -->
     <!-- Top players and top blog start -->
     <main>
-        <section>
-            <div class="top-player">
-                <div class="player">
-                    <img src="images/players/player-1.png" alt="">
-                    <h3>Player name-1</h3>
-                </div>
-                <div class="player">
-                    <img src="images/players/player-1.png" alt="">
-                    <h3>Player name-2</h3>
-                </div>
-                <div class="player">
-                    <img src="images/players/player-1.png" alt="">
-                    <h3>Player name-3</h3>
-                </div>
-                <div class="player">
-                    <img src="images/players/player-1.png" alt="">
-                    <h3>Player name-4</h3>
-                </div>
-                <div class="player">
-                    <img src="images/players/player-1.png" alt="">
-                    <h3>Player name-5</h3>
-                </div>
-                <div class="player">
-                    <img src="images/players/player-1.png" alt="">
-                    <h3>Player name-6</h3>
+        <section class="container">
+            <div class="top-players">
+                <h2 class="section-title">Top Player</h2>
+                <div class="players">
+                    <div class="player">
+                        <img src="images/players/player-1.png" alt="">
+                        <h3 class="player-name">John Smith</h3>
+                    </div>
+                    <div class="player">
+                        <img src="images/players/player-2.png" alt="">
+                        <h3 class="player-name">Pro Rasel</h3>
+                    </div>
+                    <div class="player">
+                        <img src="images/players/player-3.png" alt="">
+                        <h3 class="player-name">Abu Sufian</h3>
+                    </div>
+                    <div class="player">
+                        <img src="images/players/player-4.png" alt="">
+                        <h3 class="player-name">Shajedul Karim</h3>
+                    </div>
+                    <div class="player">
+                        <img src="images/players/player-5.png" alt="">
+                        <h3 class="player-name">Maruf Ahmed</h3>
+                    </div>
+                    <div class="player">
+                        <img src="images/players/player-6.png" alt="">
+                        <h3 class="player-name">Mujahid</h3>
+                    </div>
                 </div>
             </div>
-            <div class="top-blog">
+            <div class="top-blogs">
 
             </div>
         </section>
