--- a/index.html
+++ b/index.html
@@ -5,17 +5,34 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Leader Board</title>
+    <!-- font awesome -->
+    <script src="https://kit.fontawesome.com/6f80b071db.js" crossorigin="anonymous"></script>
     <!-- stylesheet -->
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
     <!-- Header start -->
     <header>
-
+        <div class="header-area">
+            <div class="logo-area">
+                <div class="logo-img"><a href="#"><img src="images/icons/logo.png" alt=""></a> </div>
+                <div class="logo-text"><h3>Idea</h3></div>
+            </div>
+            <div class="main-menu">
+                <nav>
+                    <ul>
+                        <li><a href="">Home</a></li>
+                        <li><a href="">About</a></li>
+                        <li><a href="">Works</a></li>
+                        <li><a href=""><img src="images/icons/profile.png" alt=""></a></li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
     </header>
     <!-- Header End -->
-    <!-- Top players and top blog start -->
     <main>
+        <!-- Top players and top blog start -->
         <section class="container">
             <div class="top-players">
                 <h2 class="section-title">Top Player</h2>
@@ -46,11 +63,127 @@
                     </div>
                 </div>
             </div>
+            <hr>
             <div class="top-blogs">
+                <h2 class="section-title">Top Blog</h2>
+                <div class="blogs">
+                    <article class="blog">
+                        <div class="thumbnail">
+                            <img src="images/blogs/blog-1.png" alt="">
+                        </div>
+                        <div class="blog-info">
+                            <h3 class="blog-title">13 of My Favorite
+                                UI/UX Goodies</h3>
+                            <p class="blog-author">By <a href="#">Danny Sapio</a> </p>
+                        </div>
+                    </article>
+                    <article class="blog">
+                        <div class="thumbnail">
+                            <img src="images/blogs/blog-2.png" alt="">
+                        </div>
+                        <div class="blog-info">
+                            <h3 class="blog-title">UI cheat sheet: 
+                                list vs grids</h3>
+                            <p class="blog-author">By <a href="#">Tess Gadd</a> </p>
+                        </div>
+                    </article>
+                    <article class="blog">
+                        <div class="thumbnail">
+                            <img src="images/blogs/blog-3.png" alt="">
+                        </div>
+                        <div class="blog-info">
+                            <h3 class="blog-title">7 typography tips 
+                                for interface design</h3>
+                            <p class="blog-author">By <a href="#">By Jeremiah Lam</a> </p>
+                        </div>
+                    </article>
+                    <article class="blog">
+                        <div class="thumbnail">
+                            <img src="images/blogs/blog-4.png" alt="">
+                        </div>
+                        <div class="blog-info">
+                            <h3 class="blog-title">Your logo is 
+                                copied</h3>
+                            <p class="blog-author">By <a href="#">Ferdinand Vogler</a> </p>
+                        </div>
+                    </article>
+                </div>
+            </div>
+        </section>
+        <!-- Top players and top blog end -->
 
+        <!-- Latest courses -->
+        <section class="container">
+            <h2 class="section-title">Latest Courses</h2>
+            <div class="courses">
+                <div class="course">
+                    <div class="course-banner">
+                        <img src="images/courses/course-1.png" alt="">
+                    </div>
+                    <div class="course-detail">
+                        <h3 class="course-title">React - The Complete Guide 2020</h3>
+                        <p class="course-author">Reed Krakoff.</p>
+                        <div class="course-info">
+                            <div class="rating">
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star empty"></i>
+                                <span>4.5</span>
+                            </div>
+                            <div class="course-duration">
+                                <i class="fas fa-clock"></i> 01:30 hr
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="course">
+                    <div class="course-banner">
+                        <img src="images/courses/course-2.png" alt="">
+                    </div>
+                    <div class="course-detail">
+                        <h3 class="course-title">React - The Complete Guide 2020</h3>
+                        <p class="course-author">Reed Krakoff.</p>
+                        <div class="course-info">
+                            <div class="rating">
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star empty"></i>
+                                <span>4.5</span>
+                            </div>
+                            <div class="course-duration">
+                                <i class="fas fa-clock"></i> 01:20 hr
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="course">
+                    <div class="course-banner">
+                        <img src="images/courses/course-3.png" alt="">
+                    </div>
+                    <div class="course-detail">
+                        <h3 class="course-title">React - The Complete Guide 2020</h3>
+                        <p class="course-author">Reed Krakoff.</p>
+                        <div class="course-info">
+                            <div class="rating">
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star empty"></i>
+                                <span>4.5</span>
+                            </div>
+                            <div class="course-duration">
+                                <i class="fas fa-clock"></i> 01:30 hr
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
-    <!-- Top players and top blog end -->
 </body>
 </html>
