update the media queries

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                         <img src="images/courses/course-2.png" alt="">
                     </div>
                     <div class="course-detail">
-                        <h3 class="course-title">React - The Complete Guide 2020</h3>
+                        <h3 class="course-title">Powerpoint 2020 Master Powerpoint Cour</h3>
                         <p class="course-author">Reed Krakoff.</p>
                         <div class="course-info">
                             <div class="rating">
@@ -165,7 +165,7 @@
                         <img src="images/courses/course-3.png" alt="">
                     </div>
                     <div class="course-detail">
-                        <h3 class="course-title">React - The Complete Guide 2020</h3>
+                        <h3 class="course-title">The Complete JavaScript Course 2020</h3>
                         <p class="course-author">Reed Krakoff.</p>
                         <div class="course-info">
                             <div class="rating">
